# keychain

./: README.md
keychain_base/: .gitignore  Cargo.toml  README.md  deploy  dfx.json  package-lock.json  package.json  webpack.config.js
keychain_base/.git_copy/: index
keychain_base/.git_copy/logs/: HEAD
keychain_base/.git_copy/refs/heads/: master
keychain_base/development/comment_tests_dependencies/: README.md  finish_deploy.py  prepare_deploy.py  settings.cfg  shared_code.py
keychain_base/src/declarations/keychain_base/: index.js  keychain_base.did  keychain_base.did.d.ts  keychain_base.did.js
keychain_base/src/declarations/keychain_base_assets/: index.js
keychain_base/src/keychain_base/: Cargo.toml  lib.rs  storage.rs  testing_utils.rs  types.rs  utils.rs
keychain_base/src/keychain_base/storage/: getters.rs  inserters.rs  types.rs
keychain_base/src/keychain_base/testing_utils/: data_creators.rs
keychain_base/src/keychain_base/types/: base_types.rs  keydata.rs  obfuscated_data.rs  response_types.rs
keychain_base/src/keychain_base/utils/: unwrappers.rs
keychain_base/src/keychain_base_assets/src/: index.html  index.js
