[package]
name = "keychain_base"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
serde = "1.0"
uuid = { version = "0.8", features = ["serde", "v5", "stdweb"] }
itertools = "0.10.2"
rand = "0.8"

